--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur esse magni vero, rerum sint earum laudantium enim consequatur amet corporis modi? Nemo in quis ratione iste, enim alias soluta modi!</p>
         </article>
         <article>
-            <h2>Cruso de JavaScript</h2>
+            <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, id nisi saepe alias dolorum molestiae vitae ea commodi cupiditate. Nobis rem neque eaque sapiente omnis natus sit et laboriosam ipsum?</p>
         </article>
     </main>
