--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img class="lado" src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img src="imagens/curso-html-css.png" alt="Curso HTML5">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur esse magni vero, rerum sint earum laudantium enim consequatur amet corporis modi? Nemo in quis ratione iste, enim alias soluta modi!</p>
+            <p><a href="curso_html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, id nisi saepe alias dolorum molestiae vitae ea commodi cupiditate. Nobis rem neque eaque sapiente omnis natus sit et laboriosam ipsum?</p>
+            <p><a href="curso_js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
