--- a/curso_html.html
+++ b/curso_html.html
@@ -13,6 +13,9 @@
         <article>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae beatae sequi praesentium vero provident quaerat id laboriosam, quibusdam quis, rerum non nemo voluptates nam repudiandae sint eveniet aliquid fugiat tempora?</p>
         </article>
+        <p>
+            <a href="index.html"><img src="imagens/btn-back.png" alt="voltar"></a>
+        </p>
     </main>
     
 </body>
