--- a/curso_js.html
+++ b/curso_js.html
@@ -12,6 +12,9 @@
         <h1>Curso JS</h1>
         <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error assumenda provident doloremque eos obcaecati quisquam, magnam saepe! Dicta nam quisquam quasi sint. Architecto tempora perferendis esse incidunt, animi deserunt totam.</article>
     </main>
+    <p>
+        <a href="index.html"><img src="imagens/btn-back.png" alt="voltar"></a>
+    </p>
     
 </body>
 </html>
