--- a/curso_js.html
+++ b/curso_js.html
@@ -11,10 +11,9 @@
     <main>
         <h1>Curso JS</h1>
         <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error assumenda provident doloremque eos obcaecati quisquam, magnam saepe! Dicta nam quisquam quasi sint. Architecto tempora perferendis esse incidunt, animi deserunt totam.</article>
+        <p><a href="index.html"><img src="imagens/btn-back.png" alt="voltar"></a></p>
     </main>
-    <p>
-        <a href="index.html"><img src="imagens/btn-back.png" alt="voltar"></a>
-    </p>
+    
     
 </body>
 </html>
