--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
-            <img class="lado" src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <img src="imagens/curso-html-css.png" alt="Curso HTML5">
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML5">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur esse magni vero, rerum sint earum laudantium enim consequatur amet corporis modi? Nemo in quis ratione iste, enim alias soluta modi!</p>
             <p><a href="curso_html.html">Acesse o curso de HTML5</a></p>
         </article>
